# skywalking-python

./: .asf.yaml  .dlc.json  .dockerignore  .flake8  .gitignore  .gitmodules  .licenserc.yaml  .requirements.txt.swp  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  MANIFEST.in  Makefile  Makefile.venv  README.md  cli.py  gunicorn.conf.py  main.py  poetry.toml  pyproject.toml  requirements-flake8.txt  requirements-style.txt  requirements.txt  setup.cfg  setup.py  sw-python.py  test_profile.py  tox.ini
.claude/skills/new-plugin/: SKILL.md
.claude/skills/plugin-test/: SKILL.md
.github/: PULL_REQUEST_TEMPLATE  file-filters.yaml  publish-docker.yaml
.github/workflows/: CI.yaml  build.yaml  dead-link-checker.yaml  e2e.yaml  publish-docker.yaml
.lift/: config.toml
.muse/: config.toml
demo/: README.md  docker-compose.yaml  flask_consumer_fork.py  flask_consumer_prefork.py  flask_provider_single.py  gunicorn_consumer_prefork.py
docker/: Dockerfile  Makefile  README.md
docker/v/: 0.7.0.sh
docs/: CLI.md  Developer.md  EnvVars.md  FAQ.md  Guide-LogReporter.md  How-to-release-docker.md  How-to-release.md  LogReporter.md  PluginTest.md  Plugins.md  README.md  menu.yaml  menu.yml
docs/en/contribution/: CONTRIBUTING.md  Claude-Code-Skills.md  CodingStyle.md  Developer.md  How-to-develop-plugin.md  How-to-release-docker.md  How-to-release.md  How-to-test-locally.md  How-to-test-plugin.md  PluginTest.md
docs/en/profiling/: profiling.md  profilng.md
docs/en/setup/: API.md  CLI.md  Configuration.md  Container.md  EnvVars.md  FAQ.md  Installation.md  Intrusive.md  Plugins.md
scripts/: build_requirements_linux.sh  build_requirements_windows.bat  setup_linux.sh  setup_windows.ps1
skywalking/: __init__.py  config.py  decorators.py  loggings.py
skywalking/agent/: __init__.py
skywalking/agent/grpc/: __init__.py
skywalking/agent/http/: __init__.py
skywalking/agent/protocol/: __init__.py  grpc.py  grpc_aio.py  grpc_log.py  http.py  http_aio.py  interceptors_aio.py  kafka.py  kafka_aio.py
skywalking/bootstrap/: __init__.py  odoo.py
skywalking/bootstrap/cli/: __init__.py  sw_python.py
skywalking/bootstrap/hooks/: uwsgi_hook.py
skywalking/bootstrap/loader/: __init__.py  sitecustomize.py
skywalking/client/: __init__.py  grpc.py  grpc_aio.py  http.py  http_aio.py  kafka.py  kafka_aio.py
skywalking/client/grpc/: __init__.py
skywalking/command/: __init__.py  base_command.py  command_service.py  profile_task_command.py
skywalking/command/executors/: __init__.py  command_executor.py  noop_command_executor.py  profile_task_command_executor.py
skywalking/config/: __init__.py
skywalking/decorators/: __init__.py
skywalking/log/: __init__.py  formatter.py  sw_logging.py
skywalking/loggings/: __init__.py
skywalking/meter/: __init__.py  counter.py  gauge.py  histogram.py  meter.py  meter_service.py
skywalking/meter/pvm/: cpu_usage.py  data_source.py  gc_data.py  mem_usage.py  thread_data.py
skywalking/plugins/: __init__.py  sw_aiohttp.py  sw_aioredis.py  sw_aiormq.py  sw_amqp.py  sw_asyncpg.py  sw_bottle.py  sw_celery.py  sw_confluent_kafka.py  sw_django.py  sw_elasticsearch.py  sw_falcon.py  sw_falcon_v3.py  sw_fastapi.py  sw_flask.py  sw_grpc.py  sw_happybase.py  sw_hbase.py  sw_http_server.py  sw_httpx.py  sw_kafka.py  sw_kubernetes.py  sw_loguru.py  sw_mysqlclient.py  sw_neo4j.py  sw_odoo.py  sw_psycopg.py  sw_psycopg2.py  sw_pulsar.py  sw_pymongo.py  sw_pymysql.py  sw_pyramid.py  sw_rabbitmq.py  sw_redis.py  sw_requests.py  sw_sanic.py  sw_sanic_v2.py  sw_threading.py  sw_tornado.py  sw_tornado5.py  (+4 more)
skywalking/plugins/http/: __init__.py
skywalking/plugins/request/: __init__.py
skywalking/plugins/sw_django/: __init__.py
skywalking/plugins/sw_flask/: __init__.py
skywalking/plugins/sw_http/: __init__.py
skywalking/profile/: __init__.py  profile_constants.py  profile_context.py  profile_service.py  profile_status.py  profile_task.py  profile_task_execution_context.py  profile_task_execution_service.py  profile_thread.py  snapshot.py  thread_profiler.py
skywalking/sampling/: __init__.py  sampling_service.py
skywalking/trace/: __init__.py  carrier.py  context.py  segment.py  span.py  tags.py
skywalking/utils/: ant_matcher.py  array.py  atomic_ref.py  comparator.py  counter.py  counter_test.py  exception.py  filter.py  integer.py  lang.py  singleton.py  time.py
sw_python/: __init__.py  __main__.py  sw_python.py
test_bak/sw_aiohttp/: docker-compose.yml
test_bak/sw_django/: docker-compose.yml
test_bak/sw_elasticsearch/: docker-compose.yml
test_bak/sw_falcon/: docker-compose.yml
test_bak/sw_flask/: docker-compose.yml
test_bak/sw_http/: docker-compose.yml
test_bak/sw_http_wsgi/: test_http_wsgi.py
test_bak/sw_kafka/: docker-compose.yml
test_bak/sw_psycopg2/: docker-compose.yml
test_bak/sw_pymongo/: docker-compose.yml  test_pymongo.py
test_bak/sw_pymysql/: docker-compose.yml
test_bak/sw_pyramid/: docker-compose.yml
test_bak/sw_rabbitmq/: docker-compose.yml
test_bak/sw_redis/: docker-compose.yml  expected.data.yml
test_bak/sw_requests/: docker-compose.yml
test_bak/sw_sanic/: docker-compose.yml
test_bak/sw_tornado/: docker-compose.yml  expected.data.yml
test_bak/sw_urllib3/: docker-compose.yml
tests/: consumer.py  gather_test_paths.sh  main.py  orchestrator.py  provider.py  test_ant_matcher.py  test_counter.py  test_gunicorn.py  test_http_plugin.py  test_process.py  test_uwsgi.py  test_version_check.py  test_version_oprators.py
tests/benchmark/: test_span.py
tests/manual/: docker-compose.yaml
tests/plugin/: Dockerfile.plugin  __init__.py  base.py  conftest.py  docker-compose.base.yml  pytest.ini
tests/unit/: test_ant_matcher.py  test_counter.py  test_filter.py  test_meter.py  test_odoo_bootstrap.py  test_odoo_plugin.py  test_sampling.py  test_version_check.py
tools/: check-license-header.py  codegen.py  config_doc_gen.py  grpc_code_gen.py  plugin_doc_gen.py
tools/doc/: plugin_doc_gen.py
tools/env/: build_requirements_linux.sh  build_requirements_windows.bat  setup_linux.sh  setup_windows.ps1
(+379 files in other folders)
